Code Updated
It will work in both PROD and local